Copyright © 2009 CNRS
Copyright © 2009-2024 Inria.  All rights reserved.
Copyright © 2009-2013 Université Bordeaux
Copyright © 2009-2011 Cisco Systems, Inc.  All rights reserved.
Copyright © 2020 Hewlett Packard Enterprise.  All rights reserved.

$COPYRIGHT$

Additional copyrights may follow

$HEADER$

===========================================================================

This file contains the main features as well as overviews of specific
bug fixes (and other actions) for each version of hwloc since version
0.9.


Version 2.12.0
--------------
* Rework oneAPI LevelZero support to use zesInit() and avoid the need
  to set ZES_ENABLE_SYSMAN=1 in the environment.
  - zesDriverGetDeviceByUuidExp() is now required in the L0 runtime.
  - ZES/Sysman variants were added in hwloc/levelzero.h to specifically
    handle ZES/Sysman device handles.
* Add support for Die objects and Module groups on Windows.
* Only filter-out Dies that are identical to their Packages
  when it applies to all Dies.
* Improve hwloc-calc to handle CPU-less NUMA nodes or platforms with
  heterogeneous memory without requiring --nodeset-output.
* The systemd-dbus-api output of hwloc-calc has changed, and
  --nodeset-output-format was added, to support NUMA node outputs.
  Thanks to Pierre Neyron.


Version 2.11.2
--------------
* Add missing CPU info attrs on aarch64 on Linux.
* Use ACPI CPPC on Linux to get better information about cpukinds,
  at least on AMD CPUs.
* Fix crash when manipulating cpukinds after topology
  duplication, thanks to Hadrien Grasland for the report.
* Fix missing input target checks in memattr functions,
  thanks to Hadrien Grasland for the report.
* Fix a memory leak when ignoring NUMA distances on FreeBSD.
* Fix build failure on old Linux distributions without accessat().
* Fix non-Windows importing of XML topologies and CPUID dumps exported
  on Windows.
* hwloc-calc --cpuset-output-format systemd-dbus-api now allows